# usysml-test-cases

./: .gitignore  .~lock.uSysML_Test_Cases.odt#  2  LICENSE  README.md  gendocs.py  gendocs.sh  genpdf.sh  setup.cfg  setup.py  setup.sh  test_cases.md  uSysML_Test_Cases.odt
images/dia/: TestCase_0002.dia
jupyter/: test_case#0006.ipynb  test_case#0007.ipynb
jupyter/.ipynb_checkpoints/: test_case#0002-checkpoint.ipynb
test_cases.dev/test_02-002/: test_02-002.md  test_02-002.sysml
test_cases/test0001/: test0001.md  test_case#0001.ipynb
test_cases/test0002/: test0002.md
test_cases/test0003/: test0003.md
test_cases/test0004/: test0004.md
test_cases/test0005/: test0005.md  test_case#0005.ipynb
test_cases/test0006/: test0006.md
test_cases/test0007/: test0007.ipynb  test0007.md
test_cases/test0008/: test0008.md  test0008.sysml
test_cases/test0009/: test0009.ipynb  test0009.md
test_cases/test_0001/: test_case#0001.ipynb
test_cases/test_01-001/: test_01-001.error.ipynb  test_01-001.error.sysml  test_01-001.md  test_01-001.output
test_cases/test_01-002/: test_01-002.ipynb  test_01-002.md
test_cases/test_01-003/: test_01-003.ipynb  test_01-003.md  test_01-003.output  test_01-003.sysml
test_cases/test_01-004/: test_01-004.md  test_01-004.output
test_cases/test_01-005/: test_01-005.ipynb  test_01-005.md  test_01-005.output  test_01-005.sysml  test_01-005.txt
test_cases/test_01-006/: test_01-006.md  test_01-006.output
test_cases/test_01-007/: test_01-007.md  test_01-007.output
test_cases/test_01-008/: test_01-008.md  test_01-008.output
(+23 files in other folders)
