[metadata]
name = usysml-test-cases
author = Vladimir Likic and Igor Dejanovic
author_email = vlad.likic@gmail.com, igor.dejanovic@gmail.com
license = CC BY-SA 4.0
description = uSysML ('micro SysML') Test Cases for SysML v2
url = https://github.com/likicv/usysml-test-cases
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    textX
    Jinja2 >= 3
